Completed the rating page layout when a user is not logged in

--- a/ratingpage.html
+++ b/ratingpage.html
@@ -23,3 +23,14 @@
         </ul>
     </nav>
 </header>
+
+<div class="rating-image-section">
+        <img src="san-siro.jpg" alt="Inter Stadium">
+    </div>
+<div class="rating-page-text">
+  <h1>
+    <a href="login.html">Login</a> or
+    <a href="sign-up.html" class="signup-button">Sign Up</a>
+  </h1>
+  <h3>To Access Productivity Rating</h3>
+</div>
