--- a/login.html
+++ b/login.html
@@ -13,14 +13,21 @@
     <img src="weblogo.png" alt="Your Logo">
 </a>
     </div>
-    <nav>
-        <ul>
-            <li><a href="accountpage.html">Account</a></li>
-            <li><a href="ratingpage.html">Rating</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="sign-up.html">Sign Up</a></li>
-        </ul>
+    <nav id="main-nav">
+      <ul>
+        <li><a href="accountpage.html">Account</a></li>
+        <li><a href="ratingpage.html">Rating</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li id="login-link"><a href="login.html">Login</a></li>
+        <li id="signup-link"><a href="sign-up.html">Sign Up</a></li>
+        <li id="user-menu" style="display:none;position:relative;">
+          <span id="user-name"></span>
+          <img id="user-profile-img" src="" alt="Profile" style="width:32px;height:32px;border-radius:50%;vertical-align:middle;">
+          <div id="dropdown" style="display:none;position:absolute;background:#fff;border:1px solid #ccc;z-index:100;">
+            <a href="#" id="logout-btn">Logout</a>
+          </div>
+        </li>
+      </ul>
     </nav>
 </header>
 
@@ -33,22 +40,67 @@
   <!-- Right: Login Form -->
   <div class="login-form">
     <h2>Login</h2>
-
-    <!-- Username Input -->
-    <label for="username">Username or Email</label>
-    <input type="text" id="username" placeholder="Username or Email">
-
-    <!-- Password Input -->
-    <label for="password">Password</label>
-    <input type="password" id="password" placeholder="Password">
-
-    <!-- Sign In Button -->
-    <button class="log-in-btn">Login</button>
-
+    <form id="login-form">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="Email" required>
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" placeholder="Password" required>
+      <button type="submit" class="log-in-btn">Login</button>
+    </form>
+    <div id="login-msg"></div>
     <p class="signup-text">
-  Don’t have an Account <a href="sign-up.html">Sign Up</a>
-</p>
+      Don’t have an Account <a href="sign-up.html">Sign Up</a>
+    </p>
   </div>
 </main>
+
+<script>
+function checkSession() {
+  fetch('back-end.php?action=session')
+    .then(res => res.json())
+    .then(data => {
+      if (data.logged_in) {
+        document.getElementById('login-link').style.display = 'none';
+        document.getElementById('signup-link').style.display = 'none';
+        document.getElementById('user-menu').style.display = 'inline-block';
+        document.getElementById('user-name').textContent = data.username;
+        document.getElementById('user-profile-img').src = data.profile_image || 'weblogo.png';
+      } else {
+        document.getElementById('login-link').style.display = '';
+        document.getElementById('signup-link').style.display = '';
+        document.getElementById('user-menu').style.display = 'none';
+      }
+    });
+}
+checkSession();
+
+const userMenu = document.getElementById('user-menu');
+if (userMenu) {
+  userMenu.addEventListener('mouseenter', function() {
+    document.getElementById('dropdown').style.display = 'block';
+  });
+  userMenu.addEventListener('mouseleave', function() {
+    document.getElementById('dropdown').style.display = 'none';
+  });
+}
+const logoutBtn = document.getElementById('logout-btn');
+if (logoutBtn) {
+  logoutBtn.addEventListener('click', function(e) {
+    e.preventDefault();
+    fetch('back-end.php?action=logout').then(() => location.reload());
+  });
+}
+
+document.getElementById('login-form').onsubmit = function(e) {
+  e.preventDefault();
+  const formData = new FormData(this);
+  fetch('back-end.php?action=login', { method: 'POST', body: formData })
+    .then(res => res.json())
+    .then(data => {
+      document.getElementById('login-msg').textContent = data.success ? 'Logged in!' : data.error;
+      if (data.success) location.href = 'accountpage.html';
+    });
+};
+</script>
 
 
