--- a/sign-up.html
+++ b/sign-up.html
@@ -31,7 +31,17 @@
     </nav>
 </header>
 
-<div class="signup-form">
+<div class="welcome-container" id="welcome-section" style="display: none;">
+  <div class="welcome-image">
+    <img src="san-siro.jpg" alt="San Siro Stadium">
+  </div>
+  <div class="welcome-content">
+    <div class="welcome-message">Welcome <span id="welcome-username"></span></div>
+    <a href="#" class="logout-btn" onclick="logout()">Logout</a>
+  </div>
+</div>
+
+<div class="signup-form" id="signup-section">
   <h2>Stop Procrastination Now!</h2>
   <form id="signup-form">
     <label for="email">Email</label>
@@ -53,6 +63,7 @@
             <img src="signup-image.webp" alt="Grid of 3D Prints">
         </div>
     </main>
+
 <script>
 function checkSession() {
   fetch('back-end.php?action=session')
@@ -63,11 +74,20 @@ function checkSession() {
         document.getElementById('signup-link').style.display = 'none';
         document.getElementById('user-menu').style.display = 'inline-block';
         document.getElementById('user-name').textContent = data.username;
-        document.getElementById('user-profile-img').src = data.profile_image || 'weblogo.png';
+        document.getElementById('user-profile-img').src = data.profile_image || 'icon-for-user.png';
+        
+        // Show welcome section for logged in users
+        document.getElementById('welcome-section').style.display = 'flex';
+        document.getElementById('signup-section').style.display = 'none';
+        document.getElementById('welcome-username').textContent = data.username;
       } else {
         document.getElementById('login-link').style.display = '';
         document.getElementById('signup-link').style.display = '';
         document.getElementById('user-menu').style.display = 'none';
+        
+        // Show signup section for non-logged in users
+        document.getElementById('welcome-section').style.display = 'none';
+        document.getElementById('signup-section').style.display = 'block';
       }
     });
 }
@@ -90,6 +110,10 @@ if (logoutBtn) {
   });
 }
 
+function logout() {
+  fetch('back-end.php?action=logout').then(() => location.reload());
+}
+
 document.getElementById('signup-form').onsubmit = function(e) {
   e.preventDefault();
   const email = document.getElementById('email').value;
@@ -108,7 +132,10 @@ document.getElementById('signup-form').onsubmit = function(e) {
     .then(res => res.json())
     .then(data => {
       document.getElementById('signup-msg').textContent = data.success ? 'Account created!' : data.error;
-      if (data.success) location.href = 'accountpage.html';
+      if (data.success) location.href = 'home.html';
     });
 };
 </script>
+
+</body>
+</html>
